# DockerMgr---Terminal-Docker---Compose-Operations-Console

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
dockermgr/: cli.py  compose_service.py  config.py  docker_service.py  event_monitor.py  health_monitor.py  impact.py  incident.py  logging_config.py  models.py  network_service.py  policy.py  reconfigure.py
dockermgr/tui/: app.py  render.py
dockermgr/utils/: diff.py  gpu.py  port_guardrails.py  system_metrics.py
docs/: INSTALL.md  OPERATIONS.md
tests/: test_compose_discovery.py  test_diff.py  test_impact.py  test_metrics_provider.py  test_override_generation.py  test_policy.py  test_port_guardrails.py  test_ports_parsing.py
